--- a/serenity.properties
+++ b/serenity.properties
@@ -15,7 +15,7 @@ serenity.console.colors = true
 enable.markdown=story,narrative,scenario,step
 webdriver.driver=chrome
 webdriver.timeouts.implicitlywait = 10000
-chrome.switches=--disable-extensions,--start-maximized,--test-type,--user-agent=New User Agent;--window-size=1920,1080;--headless
+chrome.switches=--disable-extensions,--start-maximized,--test-type,--user-agent=New User Agent;--window-size=1600,900
 chrome.capabilities.acceptSslCerts = true
 chrome.capabilities.handlesAlerts = true
 chrome_preferences.profile_default_content_settings.popups = 0
