Fix azure yml, properties and selectors/waits

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,8 @@ trigger:
 
 steps:
 
-  - task: Gradle@2
+  - task: Gradle@3
+    displayName: 'Ejecutar Test'
     inputs:
       workingDirectory: ''
       gradleWrapperFile: 'gradlew'
